--- a/crowdin.yml
+++ b/crowdin.yml
@@ -21,13 +21,13 @@ files: [
       # Source files filter
       # e.g. "/resources/en/*.json"
       #
-      "source": "/src/locales/en.json",
+      "source": "/src/i18n/locales/en.json",
 
       #
       # Where translations will be placed
       # e.g. "/resources/%two_letters_code%/%original_file_name%"
       #
-      "translation": "/src/locales/%two_letters_code%.json",
+      "translation": "/src/i18n/locales/%two_letters_code%.json",
 
       #
       # File type
