--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,10 @@ jobs:
 
       - name: Install dependencies
         run: HUSKY=0 pnpm install --frozen-lockfile
+        env:
+          DATABASE_URL: file:next14-boilerplate.db
+          NEXTAUTH_URL: http://localhost:3000
+          NEXT_PUBLIC_APP_URL: http://localhost:3000
 
       - name: Release
         env:
