--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -1,10 +1,10 @@
 name: Crowdin Action
 
 on:
-  push:
-    branches: [ main ] # Run on push to the main branch
-  schedule:
-    - cron: "0 5 * * *" # Run every day at 5am
+  # push:
+  #   branches: [ main ] # Run on push to the main branch
+  # schedule:
+  #   - cron: "0 5 * * *" # Run every day at 5am
   workflow_dispatch: # Run manually
 
 jobs:
