--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - uses: pnpm/action-setup@v4
-        name: Install pnpm
+      - name: Install pnpm 
+        uses: pnpm/action-setup@v4
         with:
           run_install: false
 
@@ -65,6 +65,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Install pnpm 
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: |
+            - recursive: true
+            args: [--frozen-lockfile]
       - run: pnpm build --if-present
 
   test:
