--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,7 +58,10 @@ jobs:
 
     name: Build with ${{ matrix.node-version }}
     runs-on: ubuntu-latest
-
+    env:
+      DATABASE_URL: file:next14-boilerplate.db
+      NEXTAUTH_URL: http://localhost:3000
+      NEXT_PUBLIC_APP_URL: http://localhost:3000
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
@@ -71,7 +74,7 @@ jobs:
         with:
           run_install: |
             - recursive: true
-            args: [--frozen-lockfile]
+              args: [--frozen-lockfile]
       - run: pnpm build --if-present
 
   test:
@@ -82,6 +85,10 @@ jobs:
 
     name: Run all tests
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: file:next14-boilerplate.db
+      NEXTAUTH_URL: http://localhost:3000
+      NEXT_PUBLIC_APP_URL: http://localhost:3000
 
     steps:
       - uses: actions/checkout@v4
@@ -91,7 +98,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-
+      - name: Install pnpm
+        run: npm install -g pnpm
       # - name: Set SENTRY_AUTH_TOKEN env if secret exists
       #   run: |
       #     if [[ -n "${{ secrets.SENTRY_AUTH_TOKEN }}" ]]; then
