chore: update github CI workflows

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ NODE_ENV=development
 DB_MIGRATIONS_ENABLED=true
 REDISMS_PORT=6379
 TURBO_TELEMETRY_DISABLED=1 # Disable Turbo telemetry
+NEXT_TELEMETRY_DISABLED=1 # Disable Next.js telemetry
 
 ######## [BEGIN] SENSITIVE DATA ######## For security reason, don't update the following variables (secret key) directly in this file.
 ######## Please create a new file named `.env.local`, all environment files ending with `.local` won't be tracked by Git.
