--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -62,6 +62,11 @@ jobs:
 
     name: Build with ${{ matrix.node-version }}
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
 
     steps:
       - uses: actions/checkout@v4
@@ -101,18 +106,23 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build Next.js
-        run: pnpm cross-env REDISMS_PORT=6379 npx redis-memory-server & pnpm build
+        run: pnpm build
         env: 
-          REDIS_URL: redis://127.0.0.1:6379
+          REDIS_URL: redis://localhost:6379
 
   test:
-    needs: build
+    needs: cache-and-install
     strategy:
       matrix:
         node-version: [20.x]
 
     name: Run all tests
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
 
     steps:
       - uses: actions/checkout@v4
@@ -160,9 +170,9 @@ jobs:
       #     fi
 
       - name: Build Next.js for E2E tests
-        run: pnpm cross-env REDISMS_PORT=6379 npx redis-memory-server & pnpm build
+        run: pnpm build
         env: 
-          REDIS_URL: redis://127.0.0.1:6379
+          REDIS_URL: redis://localhost:6379
 
       - if: github.event_name == 'pull_request'
         name: Validate all commits from PR
