--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "storybook:serve": "http-server storybook-static --port 6006 --silent",
     "serve-storybook": "run-s storybook:build storybook:serve",
     "test-storybook:ci": "start-server-and-test serve-storybook http://127.0.0.1:6006 test-storybook",
-    "prepare": "husky && npm run db:generate",
+    "prepare": "husky",
     "postinstall": "next telemetry disable",
     "commit": "cz"
   },
