--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -3,8 +3,8 @@ name: Update dependencies
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 1 * *" # Run at 00:00 on the first day of every month
-      
+    - cron: "0 0 1 * *" # Run at midnight on the first day of every month
+
 jobs:
   update:
     strategy:
@@ -15,9 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install pnpm 
@@ -45,7 +45,8 @@ jobs:
       - run: rm -Rf node_modules pnpm-lock.yaml # Remove node_modules and pnpm-lock.yaml
       - run: pnpm install
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v4
+        uses: peter-evans/create-pull-request@v6
         with:
+          token: ${{ secrets.PAT }}
           commit-message: "build: update dependencies to the latest version"
           title: Update dependencies to the latest version
