--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "serve-storybook": "run-s storybook:build storybook:serve",
     "test-storybook:ci": "start-server-and-test serve-storybook http://127.0.0.1:6006 test-storybook",
     "prepare": "husky",
-    "postinstall": "next telemetry disable",
     "commit": "cz"
   },
   "dependencies": {
@@ -136,6 +135,7 @@
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "^14.2.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-turbo": "^2.0.9",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-jest-dom": "^5.4.0",
@@ -175,7 +175,7 @@
     "stylelint-selector-bem-pattern": "^4.0.0",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.16.0",
-    "turbo": "^2.0.6",
+    "turbo": "^2.0.9",
     "typescript": "^5.5.2",
     "user-agent-data-types": "^0.4.2"
   },
