--- a/.github/workflows/checkly.yml
+++ b/.github/workflows/checkly.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        # See supported Node.js release schedule at https://example.com/en/about/releases/
 
     if: github.event.deployment_status.state == 'success' # Only run when the deployment was successful.
 
