--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -188,7 +188,10 @@ jobs:
         run: pnpm type-check
 
       - name: Run unit tests
-        run: cross-env DATABASE_URL=file:test.db NEXTAUTH_URL=http://localhost:3000  pnpm test
+        run: |
+          echo "DATABASE_URL=file:test.db" > .env.local
+          echo "NEXTAUTH_URL=http://localhost:3000" > .env.local
+          pnpm test
 
       # - name: Upload coverage reports to Codecov
       #   uses: codecov/codecov-action@v3
