chore: update CI file

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ env:
   NEXTAUTH_SECRET: yc2t4Jt+9tl0IBPHbpkLymkPGZqIJ4pmPKAkRUSbpuI=
   NEXT_TELEMETRY_DISABLED: 1
   TURBO_TELEMETRY_DISABLED: 1
-  STORE_PATH: /tmp/pnpm-store
+  REDIS_URL: redis://localhost:6379
 
 jobs:
   cache-and-install:
@@ -109,7 +109,7 @@ jobs:
       - name: Build Next.js
         run: pnpm build
         env: 
-          REDIS_URL: redis://localhost:6379
+          REDIS_URL: ${{ env.REDIS_URL }}
 
   test:
     needs: cache-and-install
@@ -176,7 +176,7 @@ jobs:
       - name: Build Next.js for E2E tests
         run: pnpm build
         env: 
-          REDIS_URL: redis://localhost:6379
+          REDIS_URL: ${{ env.REDIS_URL }}
 
       - if: github.event_name == 'pull_request'
         name: Validate all commits from PR
