--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Paalamugan (https://github.com/paalamugan)",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev:spotlight": "spotlight-sidecar",
     "dev:next": "cross-env NODE_NO_WARNINGS=1 next dev --turbo",
@@ -40,102 +41,103 @@
     "storybook:serve": "http-server storybook-static --port 6006 --silent",
     "serve-storybook": "run-s storybook:build storybook:serve",
     "test-storybook:ci": "start-server-and-test serve-storybook http://127.0.0.1:6006 test-storybook",
+    "preinstall": "npx only-allow pnpm",
     "prepare": "husky",
-    "postinstall": "next telemetry disable",
     "commit": "cz"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.3",
-    "@hookform/resolvers": "^3.3.4",
-    "@libsql/client": "^0.6.0",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@sentry/nextjs": "^7.113.0",
-    "@spotlightjs/spotlight": "^1.2.17",
+    "@heroicons/react": "^2.1.4",
+    "@hookform/resolvers": "^3.6.0",
+    "@libsql/client": "^0.7.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@sentry/nextjs": "^8.13.0",
+    "@spotlightjs/spotlight": "^2.0.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tailwindcss/typography": "^0.5.13",
-    "@tanstack/react-query": "^5.36.2",
-    "@tanstack/react-query-devtools": "^5.36.2",
+    "@tanstack/react-query": "^5.49.2",
+    "@tanstack/react-query-devtools": "^5.49.2",
     "@trpc/client": "11.0.0-rc.370",
     "@trpc/next": "11.0.0-rc.370",
     "@trpc/react-query": "11.0.0-rc.370",
     "@trpc/server": "11.0.0-rc.370",
-    "argon2": "^0.40.1",
-    "checkly": "^4.6.3",
+    "argon2": "^0.40.3",
+    "checkly": "^4.7.0",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.30.10",
-    "glob": "^10.3.15",
+    "drizzle-orm": "^0.31.2",
+    "glob": "^10.4.2",
     "ioredis": "^5.4.1",
     "luxon": "^3.4.4",
-    "next": "^14.2.3",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
-    "next-intl": "^3.14.0",
+    "next-intl": "^3.15.3",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
-    "path-to-regexp": "^6.2.2",
+    "path-to-regexp": "^7.0.0",
     "postcss-calc": "^10.0.0",
     "postcss-import": "^16.1.0",
     "postcss-mixins": "^10.0.1",
     "postcss-simple-vars": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.51.4",
+    "react-hook-form": "^7.52.0",
     "redis-memory-server": "^0.10.0",
     "server-only": "^0.0.1",
-    "sharp": "^0.33.3",
+    "sharp": "^0.33.4",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.6",
-    "zustand": "^4.5.2"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/cz-commitlint": "^19.2.0",
     "@faker-js/faker": "^8.4.1",
-    "@next/bundle-analyzer": "^14.2.3",
-    "@percy/cli": "1.28.5",
-    "@percy/playwright": "^1.0.5",
-    "@playwright/test": "^1.43.1",
+    "@next/bundle-analyzer": "^14.2.4",
+    "@percy/cli": "1.28.8",
+    "@percy/playwright": "^1.0.6",
+    "@playwright/test": "^1.45.0",
     "@savvywombat/tailwindcss-grid-areas": "^4.0.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/addon-essentials": "^7.6.19",
-    "@storybook/addon-interactions": "^7.6.19",
-    "@storybook/addon-links": "^7.6.19",
-    "@storybook/addon-themes": "^8.1.1",
-    "@storybook/blocks": "^7.6.19",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-themes": "^8.1.11",
+    "@storybook/blocks": "^8.1.11",
     "@storybook/icons": "^1.2.9",
-    "@storybook/nextjs": "^7.6.19",
-    "@storybook/react": "^7.6.19",
-    "@storybook/test": "^7.6.19",
-    "@storybook/test-runner": "^0.16.0",
+    "@storybook/nextjs": "^8.1.11",
+    "@storybook/react": "^8.1.11",
+    "@storybook/test": "^8.1.11",
+    "@storybook/test-runner": "^0.19.0",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.6",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.12.9",
-    "@types/react": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "autoprefixer": "^10.4.19",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
-    "cssnano": "^7.0.1",
-    "dotenv-cli": "^7.4.1",
-    "drizzle-kit": "^0.21.2",
+    "cssnano": "^7.0.3",
+    "dotenv-cli": "^7.4.2",
+    "drizzle-kit": "^0.22.8",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-turbo": "^2.0.9",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-jest-dom": "^5.4.0",
@@ -155,28 +157,28 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-fail-on-console": "^3.2.0",
-    "jiti": "^1.21.0",
-    "lint-staged": "^15.2.2",
+    "jest-fail-on-console": "^3.3.0",
+    "jiti": "^1.21.6",
+    "lint-staged": "^15.2.7",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.2",
     "prettier-plugin-embed": "^0.4.15",
     "prettier-plugin-sql": "^0.18.0",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "rimraf": "^5.0.5",
-    "semantic-release": "^23.0.8",
-    "start-server-and-test": "^2.0.3",
-    "storybook": "^7.6.19",
-    "stylelint": "^16.5.0",
-    "stylelint-config-standard": "^36.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "rimraf": "^5.0.7",
+    "semantic-release": "^24.0.0",
+    "start-server-and-test": "^2.0.4",
+    "storybook": "^8.1.11",
+    "stylelint": "^16.6.1",
+    "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
     "stylelint-prettier": "^5.0.0",
     "stylelint-selector-bem-pattern": "^4.0.0",
-    "tailwindcss": "^3.4.3",
-    "tsx": "^4.9.3",
-    "turbo": "^1.13.3",
-    "typescript": "^5.4.5",
+    "tailwindcss": "^3.4.4",
+    "tsx": "^4.16.0",
+    "turbo": "^2.0.9",
+    "typescript": "^5.5.2",
     "user-agent-data-types": "^0.4.2"
   },
   "engines": {
